# Upsilon.Apps.Passkey.Interfaces

./: .gitignore  CMakeLists.txt  Interfaces.csproj  README.md  Upsilon.Apps.Passkey.Interfaces.sln
.github/workflows/: csharp-cmake.yml
Interfaces/: CMakeLists.txt  IAccount.cs  ICryptographyCenter.cs  IDatabase.cs  IItem.cs  ILog.cs  IPasswordFactory.cs  ISerializationCenter.cs  IService.cs  IUser.cs  IWarning.cs  Interfaces.cd
Interfaces/Enums/: AccountOption.cs  AutoSaveMergeBehavior.cs  WarningType.cs
Interfaces/Events/: AutoSaveDetectedEventArgs.cs  LogoutEventArgs.cs  WarningDetectedEventArgs.cs
